--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "node-fetch": "^3.3.2"
-  },
-  "devDependencies": {
-    "dotenv": "^16.4.5"
   }
 }
